--- a/frontend/src/components/mapadd/style.css
+++ b/frontend/src/components/mapadd/style.css
@@ -6,17 +6,20 @@
   top: -3.6rem;
 
   color: #fff;
-  background-color: #e01c40;
+  background-color: #e01c40d5;
   border-radius: 1rem;
 
   outline: none;
   font-family: 'Raleway', sans-serif;
   font-size: medium;
   padding-left: 5px;
+}
 
+.send-btn.available {
+  background-color: #e01c40;
   cursor: pointer;
 }
 
-.send-btn:hover {
+.send-btn.available:hover {
   background-color: #e01c40d5;
 }
