--- a/frontend/src/components/mapadd/style.css
+++ b/frontend/src/components/mapadd/style.css
@@ -1,13 +1,13 @@
 .send-btn {
   width: 80px;
-  height: 60px;
+  height: 55px;
   position: relative;
-  left: 19rem;
-  top: -3.6rem;
+  left: 13.5rem;
+  top: -0.4rem;
 
   color: #fff;
   background-color: #e01c40d5;
-  border-radius: 1rem;
+  border-radius: 0rem 1rem 1rem 0rem;
 
   outline: none;
   font-family: 'Raleway', sans-serif;
