--- a/frontend/src/components/maplistall/style.css
+++ b/frontend/src/components/maplistall/style.css
@@ -9,11 +9,11 @@
 
 /* Container do Conteudo da Página */
 .container-map {
-  width: 100%;
-  height: 100vh;
+  width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 0;
 }
 
 .input-search {
@@ -34,7 +34,7 @@
 
 .div-map-image {
   width: 900px;
-  height: 400px;
+  height: 480px;
   border: 6px solid #e01c40;
   border-radius: 1rem;
 }
